# PSSI

./: CMakeLists.txt  PPI.cpp  README
Input/: example_polynomial.js  inputs.js  quad.js
Interval/: CMakeLists.txt  interval.cpp  interval.h
Json/: CMakeLists.txt  json.cpp  json.h
Newton/: CMakeLists.txt  Newton.cpp  Newton.h
Rational/: CMakeLists.txt  rational.cpp  rational.h
Rational/Expression/: CMakeLists.txt  expression.cpp  expression.h
Vector/: CMakeLists.txt  Vector.cpp  Vector.h
