cmake_minimum_required(VERSION 3.0)
project(PPI)
add_executable(PPI PPI.cpp)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
target_link_libraries(PPI PUBLIC Eigen3::Eigen)
add_subdirectory(Interval)
target_link_libraries(PPI PUBLIC Interval)
target_include_directories(PPI PUBLIC ./Interval)
add_subdirectory(Rational)
target_link_libraries(PPI PUBLIC Rational)
target_include_directories(PPI PUBLIC ./Rational)
add_subdirectory(Json)
target_link_libraries(PPI PUBLIC Json)
target_include_directories(PPI PUBLIC ./Json)
add_subdirectory(Vector)
target_link_libraries(PPI PUBLIC Vector)
target_include_directories(PPI PUBLIC ./Vector)
add_subdirectory(Newton)
target_link_libraries(PPI PUBLIC Newton)
target_include_directories(PPI PUBLIC ./Newton)